Mobile: fix visibility of countdown, tweak confirm button

--- a/twitch-bingo-extension/src/components/Mobile/BingoMobileEntryList.scss
+++ b/twitch-bingo-extension/src/components/Mobile/BingoMobileEntryList.scss
@@ -164,6 +164,8 @@
     align-items: center;
     display: grid;
     cursor: pointer;
+    border-top-left-radius: 100%;
+    border-bottom-left-radius: 100%;
 };
 
 .bingoCellPromptVisible {
@@ -178,6 +180,43 @@
 };
 
 .bingoCellPromptHidden {
+    opacity: 0.0;
+    right: -10rem;
+};
+
+.bingoCellTimer {
+    transition: all 0.5s;
+    height: 100%;
+    background-color: $grid-text-inverted; // #fff3d6
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.8);
+    color: $grid-fill-color;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    z-index: 10;
+    position: absolute;
+    right: 0rem;
+    text-align: left;
+    max-width: 10rem;
+    padding: 0.5rem;
+    align-items: center;
+    display: grid;
+    cursor: pointer;
+    border-top-left-radius: 100%;
+    border-bottom-left-radius: 100%;
+};
+
+.bingoCellTimerVisible {
+    width: unset;
+    opacity: 1.0;
+    
+    :active {
+        cursor: pointer;
+        background-color: rgba(251,247,239,0.8); // #fbf7ef
+        box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.4);
+    }
+};
+
+.bingoCellTimerHidden {
     opacity: 0.0;
     right: -10rem;
 };
